--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: geosR
 Title: The R Package for Geosciences Problems
 Version: 0.0.0.9000
 Authors@R: 
-    person("Ghozian", "Karami", , "ghoiankarami@gmail.com", role = c("aut", "cre"),
+    person("Ghozian", "Karami", , "ghoziankarami@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: This package includes several functions that will be useful for geosciences problems.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
